build(springboot-core-arch-server): 更新项目依赖和配置
- 修改 Spring Boot 版本为3.4.7
- 新增多个依赖版本：
  - mybatis: 3.0.3
  - hutool:5.8.25 - jwt: 4.3.0
  - swagger.annotations:1.6.16 - pagehelper: 1.4.6
  - lombok:1.18.32  - springdoc: 2.1.0
- 更新 maven-compiler-plugin 版本为3.10.1
- 移除 spring-boot-maven-plugin 的 repackage 目标
- 添加 compilerArgs 配置以启用预览功能