@@ -19,18 +19,23 @@
 
     <properties>
         <java.version>17</java.version>
-        <spring-boot.version>3.5.4</spring-boot.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.target>${java.version}</maven.compiler.target>
-        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <spring.boot.version>3.4.7</spring.boot.version>
+        <mybatis.version>3.0.3</mybatis.version>
+        <hutool.version>5.8.25</hutool.version>
+        <jwt.version>4.3.0</jwt.version>
+        <swagger.annotations.version>1.6.16</swagger.annotations.version>
+        <pagehelper.version>1.4.6</pagehelper.version>
+        <lombok.version>1.18.32</lombok.version>
+        <springdoc.version>2.1.0</springdoc.version>
     </properties>
+
     <dependencyManagement>
         <dependencies>
-            <!-- 引入 Spring Boot BOM 管理 -->
+            <!-- Spring Boot BOM -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>${spring-boot.version}</version>
+                <version>${spring.boot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -40,29 +45,21 @@
     <build>
         <pluginManagement>
             <plugins>
-                <!-- Maven 编译插件 -->
+                <!-- 编译器插件 -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.11.0</version>
+                    <version>3.10.1</version>
                     <configuration>
                         <source>${java.version}</source>
                         <target>${java.version}</target>
+                        <compilerArgs>--enable-preview</compilerArgs>
                     </configuration>
                 </plugin>
-
                 <!-- Spring Boot 插件 -->
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
-                    <version>${spring-boot.version}</version>
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>repackage</goal>
-                            </goals>
-                        </execution>
-                    </executions>
                 </plugin>
             </plugins>
         </pluginManagement>
